--- a/files_ss/active-test-config-webserver.service
+++ b/files_ss/active-test-config-webserver.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Auth Cache Webserver at 8888
+Description=Active Test Config Webserver at 8888
 # Indicate that we use the network.
 #    When starting up, this does not guarantee "the IP is ready", only that "network management stack is up". (Which is enough to start listening on a socket)
 #    When shutting down, this does guarantee that this service gets stopped before network is taken down.
@@ -7,8 +7,7 @@ Description=Auth Cache Webserver at 8888
 After=network.target
 
 [Service]
-# safe default (this gets overwritten by setup_css.sh)
-WorkingDirectory=/usr/local/share/
+WorkingDirectory=/usr/local/share/active_test_config/
 ExecStart=/usr/bin/python3 -m http.server 8888
 Restart=on-failure
 RestartSec=2
