--- a/files_client/flood.env
+++ b/files_client/flood.env
@@ -1,7 +1,8 @@
 # flood.env is written by the agent.
 #   ( so this is just an example)
 
-SS_URLS="https://localhost:443/"  # comma separated list of solid server URLs
+# space separated list of URLs pointing to active test config webservers
+ATC_URLS="https://localhost:8888/"
 
 POD_FILENAME='10_000.rnd'
 SERVER_UNDER_TEST='css'
