fixed flood scripts

--- a/files_client/flood.env
+++ b/files_client/flood.env
@@ -2,7 +2,7 @@
 #   ( so this is just an example)
 
 # space separated list of URLs pointing to active test config webservers
-ATC_URLS="https://localhost:8888/"
+ATC_URLS="http://localhost:8888/"
 
 POD_FILENAME='10_000.rnd'
 SERVER_UNDER_TEST='css'
@@ -13,7 +13,7 @@ AUTHENTICATE_CACHE='all'
 # Options when using the artillery tool
 ARTILLERY_CONFIG='artillery-10_000.yaml'
 
-# Options when using the css-flood tool
+# Options when using the solid-flood tool
 SOLID_FLOOD_SCENARIO='BASIC'
 SOLID_FLOOD_PARALLEL_DOWNLOADS='40'
 SOLID_FLOOD_WORKERS='32'
