--- a/files_css/setup_css.env
+++ b/files_css/setup_css.env
@@ -8,6 +8,7 @@ GENERATED_FILES_ADD_AC_PER_RESOURCE='true'
 GENERATED_FILES_ADD_AC_PER_DIR='true'
 WORKERS=1
 SERVER_UNDER_TEST='css'
+# RESOURCE_LOCKER options: debug-void memory redis file
 RESOURCE_LOCKER=redis
 STORAGE_BACKEND=file
 #SERVER_FACTORY='https'
@@ -33,4 +34,7 @@ CONTENT_FILES_FOR_GET=True
 CONTENT_FILES_RDF=False
 CONTENT_FILES_RDF_SIZE=100000
 
+# NOTIFICATION_SERVER_CONFIG options: disabled all websockets webhooks legacy-websockets new-old-websockets
 NOTIFICATION_SERVER_CONFIG=disabled
+
+LOCK_EXPIRATION=false
