--- a/playbook.yaml
+++ b/playbook.yaml
@@ -86,7 +86,7 @@
       timeout: "{{ 20 * 60 }}"
       environment:
         SS_PUBLIC_DNS_NAME: "{{ '' if ss_use_https else 'localhost' }}"
-      tags: css
+      tags: css, start
     # setup_css.sh writes to /usr/local/share/ss_url
 
     - name: Start KSS
@@ -95,7 +95,7 @@
       timeout: "{{ 20 * 60 }}"
       environment:
         SS_PUBLIC_DNS_NAME: "{{ '' if ss_use_https else 'localhost' }}"
-      tags: kss
+      tags: kss, start
     # setup_kss.sh writes to /usr/local/share/ss_url
 
     - name: Collect server URLs
