--- a/ansible-variables.yaml
+++ b/ansible-variables.yaml
@@ -12,7 +12,7 @@ install_perftest_upload: false
 install_server_solid_perftest_tools: true  # ignored for now and thus always true!
 user_active_test_config_webserver: true
 css_default_generate_users: true
-css_default_generate_content: true
+css_default_generate_content: false
 install_client_scripts: true
 css_default_user_count: 200
 
