--- a/files_kss/setup_kss.env
+++ b/files_kss/setup_kss.env
@@ -1,7 +1,9 @@
 IS_HTTPS_SERVER=true
 
-GENERATE_USERS=false
-GENERATE_CONTENT=false
+SERVER_UNDER_TEST='kss'
+
+GENERATE_USERS=true
+GENERATE_CONTENT=true
 
 # Options for generated content:
 # How many users to generate? (Each with 1 pod and their own separate copy of the generated content.)
