--- a/roles/solid_perftest_tools/tasks/main.yaml
+++ b/roles/solid_perftest_tools/tasks/main.yaml
@@ -3,6 +3,7 @@
     repo: https://github.com/SolidLabResearch/solid-perftest-tools.git
 #    repo: git@gitlab.ilabt.imec.be:wvdemeer/solid-perftest-tools.git
     dest: /usr/local/src/solid-perftest-tools
+    force: true
 
 - name: Install solid-perftest-tools
   community.general.npm:
