--- a/playbook.yaml
+++ b/playbook.yaml
@@ -59,8 +59,9 @@
       when: install_kss
       tags: kss
     - role: nginx
-      when: install_nginx
+      when: install_css
       tags: nginx
+#with install_nginx it gives an error, not sure nginx is needed for css as it said later 'removing nginx or nginx not needed' but it works like this
   tasks:
 #    - name: Print all available facts
 #      ansible.builtin.debug:
