--- a/ansible-variables.yaml
+++ b/ansible-variables.yaml
@@ -1,6 +1,7 @@
 ---
 install_kss: false
 install_css: true
+install_nginx: true
 #ss_use_https: false
 ss_use_https: true
 start_css: true
@@ -11,11 +12,11 @@ install_perftest_agent: false
 install_perftest_upload: false
 install_server_solid_perftest_tools: true  # ignored for now and thus always true!
 user_active_test_config_webserver: true
+install_client_scripts: true
+
 css_default_generate_users: true
 css_default_generate_content: false
-install_client_scripts: true
 css_default_user_count: 200
-
 css_default_workers: 0  # 0 should be auto
 css_default_notifications: webhooks  # Options: disabled all websockets webhooks legacy-websockets new-old-websockets  (websockets don't work on multithreaded CSS!)
 css_default_resource_locker: redis  # Options: debug-void memory redis file
