added merging of accounts.json and auth-cache.json

--- a/files_client/flood.env
+++ b/files_client/flood.env
@@ -2,7 +2,9 @@
 #   ( so this is just an example)
 
 # space separated list of URLs pointing to active test config webservers
-ATC_URLS="http://localhost:8888/"
+#ATC_URLS="http://localhost:8888/"
+# fetch them automatically from /usr/local/etc/atc_urls
+ATC_URLS="$(cat /usr/local/etc/atc_urls)"
 
 POD_FILENAME='10_000.rnd'
 SERVER_UNDER_TEST='css'
