--- a/ansible-variables.yaml
+++ b/ansible-variables.yaml
@@ -15,7 +15,7 @@ user_active_test_config_webserver: true
 install_client_scripts: true
 
 css_default_generate_users: true
-css_default_generate_content: false
+css_default_generate_content: true
 css_default_user_count: 2
 css_default_workers: 0  # 0 should be auto
 css_default_notifications: webhooks  # Options: disabled all websockets webhooks legacy-websockets new-old-websockets  (websockets don't work on multithreaded CSS!)
