--- a/roles/install_kss/tasks/main.yaml
+++ b/roles/install_kss/tasks/main.yaml
@@ -1,10 +1,21 @@
-- name: clone kvasir
+- name: find kvasir repo project access token
+  ansible.builtin.set_fact:
+    kvasir_pat: "{{ lookup('ansible.builtin.env', 'KVASIR_REPO_PROJECT_ACCESS_TOKEN', default=Undefined) }}"
+
+- name: clone kvasir using PAT
+  ansible.builtin.git:
+    repo: 'https://pat:{{ kvasir_pat }}@gitlab.ilabt.imec.be/ibcndevs/solid/kvasir.git'
+    dest: /usr/local/src/kvasir
+  when: kvasir_pat is defined
+
+- name: clone kvasir using ssh key from ssh-agent
   ansible.builtin.git:
     repo: 'git@gitlab.ilabt.imec.be:wkerckho/kvasir.git'
     dest: /usr/local/src/kvasir
     # IdentitiesOnly=no makes sure ssh-agent is used
     # ControlMaster=auto ControlPersist=60s tries to re-use ssh connections
     ssh_opts: '-o IdentitiesOnly=no -o ControlMaster=auto -o ControlPersist=60s'
+  when: kvasir_pat is not defined
 
 # QUARKUS_* env vars:
 #     see https://quarkus.io/guides/all-config#quarkus-vertx-http_quarkus-vertx-http-eclipse-vert.x-http
